added blocked reason and plan estimate columns

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -22,6 +22,8 @@ Ext.define('CustomApp', {
 		app.ids = [];
 		app.oids = [];
 		app.owners = [];
+		app.reasons = [];
+		app.estimates = [];
 		app.displaynames = [];
 
 		app.userStore = Ext.create('Rally.data.WsapiDataStore', {
@@ -55,7 +57,7 @@ Ext.define('CustomApp', {
 				listeners: {
 					select: function(combobox) {
 						app.iid = combobox.getRecord().get("ObjectID");
-						console.log('processing: ' + combobox.getRecord().get("Name"));
+//						console.log('processing: ' + combobox.getRecord().get("Name"));
 						if (app.mytable) {
 							app.mytable.destroy();
 						}
@@ -84,6 +86,8 @@ Ext.define('CustomApp', {
 						app.ids.push(myitem.get('FormattedID'));
 						app.oids.push(myitem.get('ObjectID'));
 						app.names.push(myitem.get('Name'));
+						app.reasons.push(myitem.get('BlockedReason'));
+						app.estimates.push(myitem.get('PlanEstimate'));
 						app.owners.push(myitem.get('Owner'));
 						var urecord = app.userStore.findRecord('ObjectID', myitem.get('Owner'));
 						if (urecord) {
@@ -102,7 +106,7 @@ Ext.define('CustomApp', {
 					app.calcBlockedTime(sdata); 
 				}
 			},
-			fetch: ["FormattedID", "Name", "Owner", "_ValidFrom", "_ValidTo", "ObjectID", 'Blocked'],
+			fetch: ["FormattedID", "Name", "Owner", "_ValidFrom", "_ValidTo", "ObjectID", 'Blocked', 'BlockedReason', 'PlanEstimate'],
 //			hydrate: ["Owner"],  // Would be nice if this would hydrate
 			autoLoad: true,
 			find: {
@@ -111,7 +115,7 @@ Ext.define('CustomApp', {
 				"Iteration" : app.iid,
 				"Blocked": true
 			},
-			sort: { "_ValidFrom": 1 }
+			sort: { "_ValidFrom": -1 }
 		});
 	},
 	calcBlockedTime : function( blockedSnapshots ) {
@@ -150,7 +154,7 @@ Ext.define('CustomApp', {
 			title: 'Story Block Durations',
 			layout: {
 				type: 'table',
-				columns: 4
+				columns: 6
 			},
 			defaults: {
 				// applied to each contained panel
@@ -161,6 +165,8 @@ Ext.define('CustomApp', {
 			items: [
 				{html: '<B>ID</B>'},
 				{html: '<B>Name</B>'},
+				{html: '<B>Blocked Reason</B>'},
+				{html: '<B>Plan Estimate</B>'},
 				{html: '<B>Owner</B>'},
 				{html: '<B>Total Duration (Hours)</B>'}
 				]
@@ -170,9 +176,12 @@ Ext.define('CustomApp', {
 			var myItemURL = "<div><a href='" + Rally.environment.getServer().getBaseUrl()+
 				'/#/search?keywords=' +app.ids[tindex]+ "' target='_blank'>" +app.ids[tindex] + "</a></div>";
 			hticks = child.ticks/60;	// conver minutes to hours
-			app.mytable.add([{html: myItemURL },{html: " " + 
-				app.names[tindex] },{html: " " + app.displaynames[tindex] },{html: " " + 
-				hticks.toFixed(2) }]);
+			app.mytable.add([{html: myItemURL },
+				{html: " " + app.names[tindex] },
+				{html: " " + app.reasons[tindex] },
+				{html: " " + app.estimates[tindex] },
+				{html: " " + app.displaynames[tindex] },
+				{html: " " + hticks.toFixed(2) }]);
 		});
 		app.add(app.mytable);
 	}
